--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,10 @@ dependencies {
     //compose navigation
     implementation "androidx.navigation:navigation-compose:2.6.0-alpha04"
 
+    //animation
+    implementation "com.airbnb.android:lottie-compose:5.2.0"
 
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.27.0"
 }
 
 // Allow references to generated code
