--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,9 @@ dependencies {
     implementation "com.airbnb.android:lottie-compose:5.2.0"
 
     implementation "com.google.accompanist:accompanist-swiperefresh:0.27.0"
+
+    //system ui controller
+    implementation 'com.google.accompanist:accompanist-systemuicontroller:0.28.0'
 }
 
 // Allow references to generated code
