--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,10 @@ dependencies {
     //coil - load image from url
     implementation "io.coil-kt:coil-compose:2.0.0-rc01"
 
+    //Accompanist-Pager
+    implementation "com.google.accompanist:accompanist-pager:0.29.0-alpha"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.29.0-alpha"
+
 
 }
 
