--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation 'com.google.code.gson:gson:2.9.1'
+    implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")
 
     //room
     implementation "androidx.room:room-runtime:$room_version"
