--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,16 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+
+
+android.enableJetifier=true
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+systemProp.http.proxyHost=fodev.org
+systemProp.http.proxyPort=8118
+systemProp.http.nonProxyHosts=*.jitpack.io, *.maven.org
+systemProp.https.proxyHost=fodev.org
+systemProp.https.proxyPort=8118
+systemProp.https.nonProxyHosts=*.jitpack.io, *.maven.org
