--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,6 +102,8 @@ dependencies {
     //gson
     implementation 'com.google.code.gson:gson:2.9.1'
 
+    //zarinpal
+    implementation 'com.zarinpal:payment-provider-ktx:0.5.3'
 }
 
 // Allow references to generated code
