--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         retrofit_version = '2.9.0'
         room_version = '2.5.0'
         hilt_version = '2.44'
+        compose_material_icon_version = '1.3.1'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
