--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,9 @@ dependencies {
 
     //icon
     implementation "androidx.compose.material:material-icons-extended:$compose_material_icon_version"
+
+    //paging
+    implementation 'androidx.paging:paging-compose:1.0.0-alpha10'
 }
 
 // Allow references to generated code
